--- a/Portfolio_UI/.gitignore
+++ b/Portfolio_UI/.gitignore
@@ -1,5 +1,5 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +7,46 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Production build outputs
+dist/
+build/
+dist-ssr/
+.next/
+out/
+coverage/
+
+# Local env files
+.env
+.env.*.local
+.env.local
+
+# System files
 .DS_Store
+Thumbs.db
+
+# IDE/editor files
+.vscode/
+!.vscode/extensions.json  # Allow extensions.json only
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS/Trash files
+ehthumbs.db
+Desktop.ini
+
+# NPM logs
+.npm/
