--- a/Portfolio_UI/package.json
+++ b/Portfolio_UI/package.json
@@ -16,24 +16,29 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "aos": "^2.3.4",
+    "bootstrap": "^5.3.7",
     "pdfjs-dist": "^3.11.174",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
-  "@eslint/js": "^9.25.0",
-  "@types/react": "^19.1.2",
-  "@types/react-dom": "^19.1.2",
-  "@vitejs/plugin-react": "^4.4.1",
-  "eslint": "^9.25.0",
-  "eslint-plugin-react-hooks": "^5.2.0",
-  "eslint-plugin-react-refresh": "^0.4.19",
-  "gh-pages": "^6.3.0",
-  "globals": "^16.0.0",
-  "rollup": "3.29.4",
-  "vite": "4.5.0"          
-}
+    "@eslint/js": "^9.25.0",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
+    "globals": "^16.0.0",
+    "postcss": "^8.5.6",
+    "rollup": "3.29.4",
+    "tailwindcss": "^4.1.11",
+    "vite": "4.5.0"
+  }
 }
